[package]
name = "led-wall-api"
version = "0.1.0"
authors = ["tristandruyen <tristandruyen@pm.me>"]
edition = "2018"

[profile.dev]
opt-level = 1
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
redis = "0.15.1"
# rocket = "0.4.2"
# tokio = { version = "0.2.11", features = ["full"] }
rosc = "~0.3"
